# platform-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dpns_contract.json
.github/workflows/: build.yml  release.yml
src/: constants.rs  flags.rs  logger.rs  main.rs  utils.rs
src/commands/: masternode_vote_dpns_name.rs  mod.rs  register_dpns_name.rs  withdraw.rs
src/errors/: cli_argument_invalid_input.rs  cli_argument_missing_error.rs  dapi_response_error.rs  identity_not_found_error.rs  identity_public_key_hash_mismatch_error.rs  mod.rs
src/factories/: create_document.rs  create_documents_batch.rs  create_masternode_vote_state_transition.rs  create_state_transition.rs  mod.rs
src/grpc/: broadcast_state_transition.rs  get_identity_by_public_key_hash.rs  get_identity_contract_nonce.rs  get_identity_identifier.rs  get_identity_keys.rs  get_identity_nonce.rs  mod.rs
src/grpc/protos/platform/v0/: platform.proto
