[package]
name = "platform-cli"
version = "0.1.1"
edition = "2021"

[dependencies]
drive = { git = "https://github.com/dashpay/platform", branch = "fix/address-list-error"}
dpp = { git = "https://github.com/dashpay/platform", branch = "fix/address-list-error" , features = ["state-transition-signing"]}
rs-dapi-client = { git = "https://github.com/dashpay/platform", branch = "fix/address-list-error" }
dapi-grpc = { git = "https://github.com/dashpay/platform", branch = "fix/address-list-error" }
simple-signer = { git = "https://github.com/dashpay/platform", branch = "fix/address-list-error" }
clap = { version = "4.5.19", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
http = "1.1.0"
hex = "0.4.3"
tonic-build = "0.12.3"
tonic = "0.12.3"
base64 = "0.21.2"
sha256 = "1.4.0"
rand = "0.8.5"
getrandom = "0.2.15"
anyhow = "1.0.89"
log = "0.4.22"
regex = "1.11.0"